# arrow-flight-based-prom-exporter

./: README.md
flight-client/: Cargo.toml
flight-client/src/: main.rs
flight-prom-exporter/: Cargo.toml
flight-prom-exporter/src/: flight_service.rs  main.rs  prom_client.rs
resources/: README.md  flight.rs  http.rs
resources/playing-around/: arrays.py
resources/playing-around/flight/: go.mod  go.sum  http-proxy-to-flight-server.go  http-server.go
resources/playing-around/proxy/: flight-reverse-proxy.go  flight.go  go.mod  go.sum  reverse-proxy.go
resources/rust-http-server/: Cargo.toml  index.html
resources/rust-http-server/src/: main.rs
