[package]
name = "flight-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = "33.0.0"
tonic = "0.8.3"
futures = "0.3.25"
tokio = "1.24.2"
arrow-schema = "33.0.0"
arrow-ipc = "33.0.0"