[package]
name = "flight-prom-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.19.0"
rand = "0.8.5"
actix-web = "4.3.0"
arrow-flight = "31.0.0"
tonic = "0.8.3"
futures = "0.3.25"
tokio = "1.24.2"
serde_arrow = "0.5.0"
serde = "1.0.152"
arrow-array = "31.0.0"
arrow-data = "33.0.0"
arrow-schema = "33.0.0"
arrow-buffer = "33.0.0"
arrow = "33.0.0"